--- a/App.config
+++ b/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="HAController.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
@@ -19,13 +24,20 @@
     </switches>
     <sharedListeners>
       <add name="Delimited"
-     type="System.Diagnostics.DelimitedListTraceListener, 
-           System, Version=2.0.0.0, 
-           Culture=neutral, PublicKeyToken=b77a5c561934e089"
+     type="System.Diagnostics.DelimitedListTraceListener, &#xD;&#xA;           System, Version=2.0.0.0, &#xD;&#xA;           Culture=neutral, PublicKeyToken=b77a5c561934e089"
+
+
      initializeData="c:\temp\sampleDelimitedFile.txt"
      traceOutputOptions="DateTime" />
       <!-- Uncomment the below section and replace APPLICATION_NAME with the name of your application to write to the Application Event Log -->
       <!--<add name="EventLog" type="System.Diagnostics.EventLogTraceListener" initializeData="APPLICATION_NAME"/> -->
     </sharedListeners>
   </system.diagnostics>
+  <userSettings>
+    <HAController.My.MySettings>
+      <setting name="LastGoodCOMPort" serializeAs="String">
+        <value />
+      </setting>
+    </HAController.My.MySettings>
+  </userSettings>
 </configuration>
