Remember previous home status

--- a/App.config
+++ b/App.config
@@ -38,6 +38,9 @@
       <setting name="LastGoodCOMPort" serializeAs="String">
         <value />
       </setting>
+      <setting name="LastHomeStatus" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
 </configuration>
