Add OpenWeatherMap API to gather outside conditions
Kinda experimental, it logs it, but there's no display at the moment.
Also, it's still in Kelvin.

--- a/App.config
+++ b/App.config
@@ -41,6 +41,12 @@
       <setting name="LastHomeStatus" serializeAs="String">
         <value />
       </setting>
+      <setting name="CityID" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="OWMAPIKey" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
 </configuration>
