--- a/HAController.vbproj
+++ b/HAController.vbproj
@@ -77,7 +77,8 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Module1.vb" />
+    <Compile Include="modGlobal.vb" />
+    <Compile Include="modInsteon.vb" />
     <Compile Include="modOpenWeatherMap.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
