--- a/App.config
+++ b/App.config
@@ -47,6 +47,9 @@
       <setting name="OWMAPIKey" serializeAs="String">
         <value />
       </setting>
+      <setting name="Speech_Enable" serializeAs="String">
+        <value>True</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
 </configuration>
