Actually show the Verbose logging
Definitely still need it. Maybe always will want it?

--- a/App.config
+++ b/App.config
@@ -20,7 +20,7 @@
       </source>
     </sources>
     <switches>
-      <add name="DefaultSwitch" value="Information" />
+      <add name="DefaultSwitch" value="Verbose" />
     </switches>
     <sharedListeners>
       <add name="Delimited"
