OpenWeatherMap settings now prefixed, Enable setting added

--- a/App.config
+++ b/App.config
@@ -41,13 +41,16 @@
       <setting name="LastHomeStatus" serializeAs="String">
         <value />
       </setting>
-      <setting name="CityID" serializeAs="String">
+      <setting name="OpenWeatherMap_CityID" serializeAs="String">
         <value />
       </setting>
-      <setting name="OWMAPIKey" serializeAs="String">
+      <setting name="OpenWeatherMap_APIKey" serializeAs="String">
         <value />
       </setting>
       <setting name="Speech_Enable" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="OpenWeatherMap_Enable" serializeAs="String">
         <value>True</value>
       </setting>
     </HAController.My.MySettings>
