Terrible hack to make thermostat buttons regularly useful
Tired of having to look up my thermostat address. Will definitely
replace this when I have an actual device database.

--- a/App.config
+++ b/App.config
@@ -53,6 +53,9 @@
       <setting name="OpenWeatherMap_Enable" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="Insteon_ThermostatAddr" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
 </configuration>
