Prefix the rest of the settings

--- a/App.config
+++ b/App.config
@@ -35,10 +35,10 @@
   </system.diagnostics>
   <userSettings>
     <HAController.My.MySettings>
-      <setting name="LastGoodCOMPort" serializeAs="String">
+      <setting name="Insteon_LastGoodCOMPort" serializeAs="String">
         <value />
       </setting>
-      <setting name="LastHomeStatus" serializeAs="String">
+      <setting name="Global_LastHomeStatus" serializeAs="String">
         <value />
       </setting>
       <setting name="OpenWeatherMap_CityID" serializeAs="String">
