Add Disable, Enable, and Unload methods to modInsteon
With all the Insteon code moved to this module, this makes sense to
have.

--- a/App.config
+++ b/App.config
@@ -56,6 +56,9 @@
       <setting name="Insteon_ThermostatAddr" serializeAs="String">
         <value />
       </setting>
+      <setting name="Insteon_Enable" serializeAs="String">
+        <value>True</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
 </configuration>
