Preliminary InsteonAlarmControl commit
Doesn't do more than turn it on and off, same as using
InsteonLightControl for it at the moment. Currently untested too.

--- a/App.config
+++ b/App.config
@@ -59,6 +59,9 @@
       <setting name="Insteon_Enable" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="Insteon_AlarmAddr" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
 </configuration>
