Added response to door sensor triggering
Yes, it's a bit hacky.

--- a/App.config
+++ b/App.config
@@ -62,6 +62,9 @@
       <setting name="Insteon_AlarmAddr" serializeAs="String">
         <value />
       </setting>
+      <setting name="Insteon_DoorSensorAddr" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
 </configuration>
