Initial addition of Ping function

--- a/App.config
+++ b/App.config
@@ -44,10 +44,10 @@
       <setting name="Insteon_DoorSensorAddr" serializeAs="String">
         <value />
       </setting>
-	    <setting name="Insteon_Enable" serializeAs="String">
+	  <setting name="Insteon_Enable" serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="Insteon_LastGoodCOMPort" serializeAs="String">
+	  <setting name="Insteon_LastGoodCOMPort" serializeAs="String">
         <value />
       </setting>
       <setting name="Insteon_ThermostatAddr" serializeAs="String">
@@ -59,8 +59,14 @@
       <setting name="OpenWeatherMap_CityID" serializeAs="String">
         <value />
       </setting>
-	    <setting name="OpenWeatherMap_Enable" serializeAs="String">
+      <setting name="OpenWeatherMap_Enable" serializeAs="String">
         <value>True</value>
+      </setting>
+      <setting name="Ping_Enable" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="Ping_InternetCheckAddress" serializeAs="String">
+        <value>8.8.8.8</value>
       </setting>
       <setting name="Speech_Enable" serializeAs="String">
         <value>True</value>
