--- a/packages.config
+++ b/packages.config
@@ -2,5 +2,10 @@
 <packages>
   <package id="Common.Logging" version="3.0.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.0.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="Quartz" version="2.3.3" targetFramework="net45" />
+  <package id="System.Data.SQLite" version="1.0.98.1" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.98.1" targetFramework="net45" />
+  <package id="System.Data.SQLite.EF6" version="1.0.98.1" targetFramework="net45" />
+  <package id="System.Data.SQLite.Linq" version="1.0.98.1" targetFramework="net45" />
 </packages>
