--- a/App.config
+++ b/App.config
@@ -25,7 +25,7 @@
       <add name="DefaultSwitch" value="Verbose" />
     </switches>
     <sharedListeners>
-      <add name="Delimited" type="System.Diagnostics.DelimitedListTraceListener, &#xD;&#xA;           System, Version=2.0.0.0, &#xD;&#xA;           Culture=neutral, PublicKeyToken=b77a5c561934e089" initializeData="c:\temp\sampleDelimitedFile.txt" traceOutputOptions="DateTime" />
+      <add name="Delimited" type="System.Diagnostics.DelimitedListTraceListener, &#xD;&#xA;           System, Version=2.0.0.0, &#xD;&#xA;           Culture=neutral, PublicKeyToken=b77a5c561934e089" initializeData="C:\HAC\HAClog.txt" traceOutputOptions="DateTime" />
       <!-- Uncomment the below section and replace APPLICATION_NAME with the name of your application to write to the Application Event Log -->
       <!--<add name="EventLog" type="System.Diagnostics.EventLogTraceListener" initializeData="APPLICATION_NAME"/> -->
     </sharedListeners>
