Initial commit of database connection
Doesn't do anything yet.

--- a/App.config
+++ b/App.config
@@ -32,6 +32,9 @@
   </system.diagnostics>
   <userSettings>
     <HAController.My.MySettings>
+      <setting name="Database_FileURI" serializeAs="String">
+        <value>C:\HAC\HACdb.sqlite</value>
+      </setting>
       <setting name="Global_LastHomeStatus" serializeAs="String">
         <value />
       </setting>
