Start assembling mail module for notifications
Figuring out credentials will be a pain. Doesn't do much yet.

--- a/App.config
+++ b/App.config
@@ -71,6 +71,15 @@
       <setting name="Speech_Enable" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="Mail_Enable" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="Mail_Host" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Mail_Port" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
