Trying to get a mail notification to work

--- a/App.config
+++ b/App.config
@@ -80,6 +80,12 @@
       <setting name="Mail_Port" serializeAs="String">
         <value />
       </setting>
+      <setting name="Mail_To" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Mail_From" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
