--- a/App.config
+++ b/App.config
@@ -86,6 +86,15 @@
       <setting name="Mail_From" serializeAs="String">
         <value />
       </setting>
+      <setting name="Mail_Password" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Mail_Username" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Global_TimeOffset" serializeAs="String">
+        <value>0</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
