Detect broadcasts from INSTEON Smoke Bridge
Since my computer lit on fire this week, I decided this was a priority.

--- a/App.config
+++ b/App.config
@@ -92,6 +92,9 @@
       <setting name="Mail_Username" serializeAs="String">
         <value />
       </setting>
+      <setting name="Insteon_SmokeBridgeAddr" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
