Add back door sensor setting
This is terrible, and I know. System needs to support an infinite number
of doors. But I only have two doors, and this makes it useful for now.

--- a/App.config
+++ b/App.config
@@ -95,6 +95,9 @@
       <setting name="Insteon_SmokeBridgeAddr" serializeAs="String">
         <value />
       </setting>
+      <setting name="Insteon_BackDoorSensorAddr" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
