Alarm turns on light

--- a/App.config
+++ b/App.config
@@ -98,6 +98,9 @@
       <setting name="Insteon_BackDoorSensorAddr" serializeAs="String">
         <value />
       </setting>
+      <setting name="Insteon_WakeLightAddr" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
