Give the bot an identity
This serves no purpose, I was bored.

--- a/App.config
+++ b/App.config
@@ -101,6 +101,9 @@
       <setting name="Insteon_WakeLightAddr" serializeAs="String">
         <value />
       </setting>
+      <setting name="Converse_BotName" serializeAs="String">
+        <value>Sarah</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
