Specify host and port settings are for SMTP, add POP

--- a/App.config
+++ b/App.config
@@ -74,10 +74,10 @@
       <setting name="Mail_Enable" serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="Mail_Host" serializeAs="String">
+      <setting name="Mail_SMTPHost" serializeAs="String">
         <value />
       </setting>
-      <setting name="Mail_Port" serializeAs="String">
+      <setting name="Mail_SMTPPort" serializeAs="String">
         <value />
       </setting>
       <setting name="Mail_To" serializeAs="String">
@@ -103,6 +103,12 @@
       </setting>
       <setting name="Converse_BotName" serializeAs="String">
         <value>Sarah</value>
+      </setting>
+      <setting name="Mail_POPHost" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Mail_POPPort" serializeAs="String">
+        <value />
       </setting>
     </HAController.My.MySettings>
   </userSettings>
