Check for authorized commands, acknowledge
Doesn't actually execute them. Yet.

--- a/App.config
+++ b/App.config
@@ -110,6 +110,9 @@
       <setting name="Mail_POPPort" serializeAs="String">
         <value />
       </setting>
+      <setting name="Mail_CmdWhitelist" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
