--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -80,5 +80,8 @@
     <Setting Name="Mail_POPPort" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Mail_CmdWhitelist" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
