Add additional authorization key to mail command system

--- a/App.config
+++ b/App.config
@@ -113,6 +113,9 @@
       <setting name="Mail_CmdWhitelist" serializeAs="String">
         <value />
       </setting>
+      <setting name="Mail_CmdKey" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
