--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -83,5 +83,8 @@
     <Setting Name="Mail_CmdWhitelist" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Mail_CmdKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
