--- a/HAController.vbproj
+++ b/HAController.vbproj
@@ -100,6 +100,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsDevices.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
