Allow some voice customization

--- a/App.config
+++ b/App.config
@@ -116,6 +116,12 @@
       <setting name="Mail_CmdKey" serializeAs="String">
         <value />
       </setting>
+      <setting name="Speech_SelectedVoice" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Converse_BotGender" serializeAs="String">
+        <value>Female</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
