Query for when the a door was last opened
A useful feature!

--- a/App.config
+++ b/App.config
@@ -122,6 +122,9 @@
       <setting name="Converse_BotGender" serializeAs="String">
         <value>Female</value>
       </setting>
+      <setting name="Global_TimeDoorLastOpened" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
