Add computer management module
Doesn't do much right now. But ideas!

--- a/HAController.vbproj
+++ b/HAController.vbproj
@@ -108,6 +108,7 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="modComputer.vb" />
     <Compile Include="modConverse.vb" />
     <Compile Include="modDatabase.vb" />
     <Compile Include="modDreamCheeky.vb" />
