Add DELU methods to DreamCheeky module

--- a/App.config
+++ b/App.config
@@ -125,6 +125,9 @@
       <setting name="Global_TimeDoorLastOpened" serializeAs="String">
         <value />
       </setting>
+      <setting name="DreamCheeky_Enable" serializeAs="String">
+        <value>False</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
