--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -95,5 +95,8 @@
     <Setting Name="Global_TimeDoorLastOpened" Type="System.DateTime" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="DreamCheeky_Enable" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
