Create experimental flag
Lets me leave broken code in! :D

--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -98,5 +98,8 @@
     <Setting Name="DreamCheeky_Enable" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Global_Experimental" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
