--- a/App.config
+++ b/App.config
@@ -128,6 +128,9 @@
       <setting name="DreamCheeky_Enable" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="Global_Experimental" serializeAs="String">
+        <value>False</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
