Check log file size and warn on large log files

--- a/App.config
+++ b/App.config
@@ -131,6 +131,9 @@
       <setting name="Global_Experimental" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="Global_LogFileURI" serializeAs="String">
+        <value>C:\HAC\HAClog.txt</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
