Add car mode setting
So I know if this is running in a car, and know to assume nobody is
looking at a screen.

--- a/App.config
+++ b/App.config
@@ -134,6 +134,9 @@
       <setting name="Global_LogFileURI" serializeAs="String">
         <value>C:\HAC\HAClog.txt</value>
       </setting>
+      <setting name="Global_CarMode" serializeAs="String">
+        <value>False</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
