Display last known temperatures on form

--- a/App.config
+++ b/App.config
@@ -137,6 +137,12 @@
       <setting name="Global_CarMode" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="Global_LastKnownOutsideTemp" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="Global_LastKnownInsideTemp" serializeAs="String">
+        <value>0</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
