--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -107,5 +107,11 @@
     <Setting Name="Global_CarMode" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Global_LastKnownOutsideTemp" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Global_LastKnownInsideTemp" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
