Add storing weather condition, rearrange form for display

--- a/App.config
+++ b/App.config
@@ -143,6 +143,9 @@
       <setting name="Global_LastKnownInsideTemp" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="Global_LastKnownOutsideCondition" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
