--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -113,5 +113,8 @@
     <Setting Name="Global_LastKnownInsideTemp" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="Global_LastKnownOutsideCondition" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
