Remember last playlist used for music

--- a/App.config
+++ b/App.config
@@ -146,6 +146,9 @@
       <setting name="Global_LastKnownOutsideCondition" serializeAs="String">
         <value />
       </setting>
+      <setting name="Computer_LastMusicPlaylist" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
