--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -116,5 +116,8 @@
     <Setting Name="Global_LastKnownOutsideCondition" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Computer_LastMusicPlaylist" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
