Implement warnings for inside temperature

--- a/App.config
+++ b/App.config
@@ -149,6 +149,12 @@
       <setting name="Computer_LastMusicPlaylist" serializeAs="String">
         <value />
       </setting>
+      <setting name="Global_InsideTempHeatWarning" serializeAs="String">
+        <value>82</value>
+      </setting>
+      <setting name="Global_InsideTempColdWarning" serializeAs="String">
+        <value>66</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
