Add setting to store Random.org API key

--- a/App.config
+++ b/App.config
@@ -155,6 +155,9 @@
       <setting name="Global_InsideTempColdWarning" serializeAs="String">
         <value>66</value>
       </setting>
+      <setting name="Random_RandomOrgAPIKey" serializeAs="String">
+        <value>00000000-0000-0000-0000-000000000000</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
