Move randomization code to new modRandom file

--- a/HAController.vbproj
+++ b/HAController.vbproj
@@ -118,6 +118,7 @@
     <Compile Include="modMail.vb" />
     <Compile Include="modOpenWeatherMap.vb" />
     <Compile Include="modPing.vb" />
+    <Compile Include="modRandom.vb" />
     <Compile Include="modScheduler.vb" />
     <Compile Include="modSpeech.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
