Process Random.org JSON, fallback on fail, add setting

--- a/App.config
+++ b/App.config
@@ -158,6 +158,9 @@
       <setting name="Random_RandomOrgAPIKey" serializeAs="String">
         <value>00000000-0000-0000-0000-000000000000</value>
       </setting>
+      <setting name="Random_RandomOrgEnable" serializeAs="String">
+        <value>True</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <system.data>
