--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -128,5 +128,8 @@
     <Setting Name="Random_RandomOrgAPIKey" Type="System.String" Scope="User">
       <Value Profile="(Default)">00000000-0000-0000-0000-000000000000</Value>
     </Setting>
+    <Setting Name="Random_RandomOrgEnable" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
