Initial code for Matrix-compatible LCD support

--- a/App.config
+++ b/App.config
@@ -161,6 +161,12 @@
       <setting name="Random_RandomOrgEnable" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="MatrixLCD_LastGoodCOMPort" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="MatrixLCD_Enable" serializeAs="String">
+        <value>False</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
