--- a/HAController.vbproj
+++ b/HAController.vbproj
@@ -132,6 +132,7 @@
     <Compile Include="modRandom.vb" />
     <Compile Include="modScheduler.vb" />
     <Compile Include="modSpeech.vb" />
+    <Compile Include="modMatrixLCD.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
