--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -131,5 +131,11 @@
     <Setting Name="Random_RandomOrgEnable" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="MatrixLCD_LastGoodCOMPort" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="MatrixLCD_Enable" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
