Rename last playlist setting, actually set it

--- a/App.config
+++ b/App.config
@@ -146,7 +146,7 @@
       <setting name="Global_LastKnownOutsideCondition" serializeAs="String">
         <value />
       </setting>
-      <setting name="Computer_LastMusicPlaylist" serializeAs="String">
+      <setting name="Music_LastPlaylist" serializeAs="String">
         <value />
       </setting>
       <setting name="Global_InsideTempHeatWarning" serializeAs="String">
