Make it remember music volume
Setting this repeatedly annoyed the crud out of me.

--- a/App.config
+++ b/App.config
@@ -167,6 +167,9 @@
       <setting name="MatrixLCD_Enable" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="Music_Volume" serializeAs="String">
+        <value>50</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
