--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -137,5 +137,8 @@
     <Setting Name="MatrixLCD_Enable" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Music_Volume" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">50</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
