Enable and disable music module
Even though there's really no performance reason to do so right now.

--- a/App.config
+++ b/App.config
@@ -170,6 +170,9 @@
       <setting name="Music_Volume" serializeAs="String">
         <value>50</value>
       </setting>
+      <setting name="Music_Enable" serializeAs="String">
+        <value>True</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
