--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -140,5 +140,8 @@
     <Setting Name="Music_Volume" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">50</Value>
     </Setting>
+    <Setting Name="Music_Enable" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
